// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputWithIconButton onAction is called on click 1`] = `
.c1 {
  box-sizing: border-box;
  margin-top: 8px;
  width: 90%;
}

.c3 {
  box-sizing: border-box;
  width: 10%;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 16px;
  font-family: inherit;
  display: 'block';
  vertical-align: 'middle';
  background-color: transparent;
  border: none;
  border-bottom: 1px solid #f1f3f5;
  border-radius: 0;
  margin: 0;
  padding: 0;
  outline: none;
  width: 100%;
  height: 32px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c2:hover:not([readonly]) {
  border-bottom: 1px solid #dee2e6;
}

.c2:focus:not([readonly]) {
  border-bottom: 1px solid #0588cb;
}

.c4 {
  border-radius: 56px;
  display: inline-block;
  height: 70px;
  line-height: 1;
  padding-left: 56px;
  padding-right: 56px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  color: #f8f9fa;
  background-color: #0588cb;
  border: none;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 28px;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 28px;
  border-radius: none;
  color: #adb5bd;
  background-color: transparent;
}

.c4:hover:enabled {
  border: none;
  background-color: #37a6ed;
}

.c4:active:enabled {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: none;
  background-color: #0f77b8;
}

.c4:hover {
  background-color: transparent;
  color: #ced4da;
}

.c4:active {
  background-color: transparent;
  color: #868e96;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="0.9"
    >
      <div>
        <input
          class="c2"
          data-testid="test-input"
          font-size="1"
          rows="3"
          type="text"
        />
      </div>
    </div>
    <div
      class="c3"
      width="0.1"
    >
      <button
        class="c4"
        font-size="3"
      />
    </div>
  </div>
</div>
`;

exports[`InputWithIconButton render with onAction prop 1`] = `
.c1 {
  box-sizing: border-box;
  margin-top: 8px;
  width: 90%;
}

.c3 {
  box-sizing: border-box;
  width: 10%;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 16px;
  font-family: inherit;
  display: 'block';
  vertical-align: 'middle';
  background-color: transparent;
  border: none;
  border-bottom: 1px solid #f1f3f5;
  border-radius: 0;
  margin: 0;
  padding: 0;
  outline: none;
  width: 100%;
  height: 32px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c2:hover:not([readonly]) {
  border-bottom: 1px solid #dee2e6;
}

.c2:focus:not([readonly]) {
  border-bottom: 1px solid #0588cb;
}

.c4 {
  border-radius: 56px;
  display: inline-block;
  height: 70px;
  line-height: 1;
  padding-left: 56px;
  padding-right: 56px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  color: #f8f9fa;
  background-color: #0588cb;
  border: none;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 28px;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 28px;
  border-radius: none;
  color: #adb5bd;
  background-color: transparent;
}

.c4:hover:enabled {
  border: none;
  background-color: #37a6ed;
}

.c4:active:enabled {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: none;
  background-color: #0f77b8;
}

.c4:hover {
  background-color: transparent;
  color: #ced4da;
}

.c4:active {
  background-color: transparent;
  color: #868e96;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="0.9"
    >
      <div>
        <input
          class="c2"
          font-size="1"
          rows="3"
          type="text"
        />
      </div>
    </div>
    <div
      class="c3"
      width="0.1"
    >
      <button
        class="c4"
        font-size="3"
      >
        <div />
      </button>
    </div>
  </div>
</div>
`;

exports[`InputWithIconButton renders 1`] = `
.c1 {
  box-sizing: border-box;
  margin-top: 8px;
  width: 90%;
}

.c3 {
  box-sizing: border-box;
  width: 10%;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 16px;
  font-family: inherit;
  display: 'block';
  vertical-align: 'middle';
  background-color: transparent;
  border: none;
  border-bottom: 1px solid #f1f3f5;
  border-radius: 0;
  margin: 0;
  padding: 0;
  outline: none;
  width: 100%;
  height: 32px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c2:hover:not([readonly]) {
  border-bottom: 1px solid #dee2e6;
}

.c2:focus:not([readonly]) {
  border-bottom: 1px solid #0588cb;
}

.c4 {
  border-radius: 56px;
  display: inline-block;
  height: 70px;
  line-height: 1;
  padding-left: 56px;
  padding-right: 56px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: 1;
  color: #f8f9fa;
  background-color: #0588cb;
  border: none;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 28px;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 28px;
  border-radius: none;
  color: #adb5bd;
  background-color: transparent;
}

.c4:hover:enabled {
  border: none;
  background-color: #37a6ed;
}

.c4:active:enabled {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: none;
  background-color: #0f77b8;
}

.c4:hover {
  background-color: transparent;
  color: #ced4da;
}

.c4:active {
  background-color: transparent;
  color: #868e96;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="0.9"
    >
      <div>
        <input
          class="c2"
          font-size="1"
          rows="3"
          type="text"
        />
      </div>
    </div>
    <div
      class="c3"
      width="0.1"
    >
      <button
        class="c4"
        font-size="3"
      >
        <div />
      </button>
    </div>
  </div>
</div>
`;
